<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.p2gx.maxodiff</groupId>
        <artifactId>maxodiff</artifactId>
        <version>0.4.2</version>
    </parent>

    <artifactId>maxodiff-core</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.monarchinitiative.phenol</groupId>
            <artifactId>phenol-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.monarchinitiative.phenol</groupId>
            <artifactId>phenol-io</artifactId>
        </dependency>
        <dependency>
            <groupId>org.monarchinitiative.phenol</groupId>
            <artifactId>phenol-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- TODO: use in benchmark module       -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets</groupId>
            <artifactId>phenopacket-schema</artifactId>
            <version>2.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets.phenopackettools</groupId>
            <artifactId>phenopacket-tools-core</artifactId>
            <version>${phenopacket-tools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets.phenopackettools</groupId>
            <artifactId>phenopacket-tools-io</artifactId>
            <version>${phenopacket-tools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets.phenopackettools</groupId>
            <artifactId>phenopacket-tools-util</artifactId>
            <version>${phenopacket-tools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets.phenopackettools</groupId>
            <artifactId>phenopacket-tools-validator-core</artifactId>
            <version>${phenopacket-tools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.phenopackets.phenopackettools</groupId>
            <artifactId>phenopacket-tools-validator-jsonschema</artifactId>
            <version>${phenopacket-tools.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
